--- a/relazione/template.tex
+++ b/relazione/template.tex
@@ -43,6 +43,7 @@
 \addbibresource{bibliografia.bib}
 \renewcommand{\tablename}{}
 \usepackage[hyphenbreaks]{breakurl}
+\usepackage{verbatim}
 
 
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
